--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -114,6 +114,7 @@
     <Compile Include="PluralWords.cs" />
     <Compile Include="ProcessExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Date.cs" />
     <Compile Include="SingletonManager.cs" />
     <Compile Include="XPath.cs" />
     <Compile Include="XPath.Tools.cs" />
