--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -370,7 +370,7 @@
     <Compile Include="ErrorHandler\AiHandleErrorAttribute.cs" />
     <Compile Include="Framework\ApiAuth.cs" />
     <Compile Include="Framework\ControllerExtensions.cs" />
-    <Compile Include="Framework\FileFromWebCacheManager.cs" />
+    <Compile Include="Framework\RemoteUrlWebCacheManager.cs" />
     <Compile Include="Framework\Html2Png.cs" />
     <Compile Include="Framework\Shared\Data.cs" />
     <Compile Include="Framework\LimitedAccess.cs" />
@@ -450,7 +450,6 @@
     <Content Include="Content\jsoneditor.css" />
     <Content Include="Content\new.css" />
     <Content Include="Content\socialBanner.css" />
-    <Content Include="Content\Site.css" />
     <Content Include="Content\social-share-kit.css" />
     <Content Include="Content\typeaheadjs.css" />
     <Content Include="Content\visavail.css" />
@@ -1318,16 +1317,12 @@
     <Content Include="Views\Data\ImportDataProcess.cshtml" />
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Roles\Edit.cshtml" />
-    <Content Include="Views\Sponzori\_SearchForm.cshtml" />
-    <Content Include="Views\Sponzori\Hledat.cshtml" />
     <Content Include="Views\Sponzori\Index.cshtml" />
-    <Content Include="Views\Sponzori\Prezidenti.cshtml" />
-    <Content Include="Views\Sponzori\SubjektyTypu.cshtml" />
-    <Content Include="Views\Sponzori\Transakce.cshtml" />
-    <Content Include="Views\Sponzori\Ucet.cshtml" />
-    <Content Include="Views\Sponzori\Ucty.cshtml" />
     <Content Include="Views\Sponzori\Seznam.cshtml" />
     <Content Include="Views\Sponzori\Strana.cshtml" />
+    <Content Include="Views\Sponzori\Strany.cshtml" />
+    <Content Include="Views\Sponzori\Top_child.cshtml" />
+    <Content Include="Views\Sponzori\Top.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
