--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -444,6 +444,7 @@
       <DependentUpon>Db.tt</DependentUpon>
     </Compile>
     <Compile Include="Data\Bookmark.Partial.cs" />
+    <Compile Include="Data\Darujme.cs" />
     <Compile Include="Data\External\DataSets\ApiResonseStatus.cs" />
     <Compile Include="Data\External\DataSets\RuntimeClassBuilder.cs" />
     <Compile Include="Data\External\DataSets\DataSearchResult.cs" />
