--- a/HlidacStatu.Lib.Db.Insolvence/HlidacStatu.Lib.Db.Insolvence.csproj
+++ b/HlidacStatu.Lib.Db.Insolvence/HlidacStatu.Lib.Db.Insolvence.csproj
@@ -97,6 +97,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>InsolvenceModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="IOsoba.cs" />
+    <Compile Include="IOsoba.Implement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rizeni.cs">
       <DependentUpon>InsolvenceModel.tt</DependentUpon>
