--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -354,6 +354,10 @@
           <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
           <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
         </dependentAssembly>
+        <dependentAssembly>
+          <assemblyIdentity name="OpenTracing" publicKeyToken="61503406977abdaf" culture="neutral" />
+          <bindingRedirect oldVersion="0.0.0.0-0.12.1.0" newVersion="0.12.1.0" />
+        </dependentAssembly>
 
         <!--<dependentAssembly>
           <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
