--- a/Util/packages.config
+++ b/Util/packages.config
@@ -6,11 +6,15 @@
   <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="NEST" version="7.5.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="ZeroFormatter" version="1.6.4" targetFramework="net472" />
