--- a/Util/packages.config
+++ b/Util/packages.config
@@ -14,7 +14,9 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="ZeroFormatter" version="1.6.4" targetFramework="net472" />
