--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1383,6 +1383,7 @@
     <Content Include="Views\Data\CreateFromBackup1.cshtml" />
     <Content Include="Views\Data\Promo\behind_vyjadreni-politiku.cshtml" />
     <Content Include="Views\Data\Promo\front_stav-mostu.cshtml" />
+    <Content Include="Views\Home\Reports\25_MinisterstvaStrany.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
