--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -461,6 +461,7 @@
     </Compile>
     <Compile Include="Data\Bookmark.Partial.cs" />
     <Compile Include="Data\Darujme.cs" />
+    <Compile Include="Data\Dotace\Cerpani.cs" />
     <Compile Include="Data\Dotace\Dotace.cs" />
     <Compile Include="Data\Dotace\DotaceService.cs" />
     <Compile Include="Data\Dotace\DotaceService.Search.cs" />
